--- a/src/Feature/Account/platform/Views/Feature/Wealth/Account/Oauth/Oauth.cshtml
+++ b/src/Feature/Account/platform/Views/Feature/Wealth/Account/Oauth/Oauth.cshtml
@@ -1,15 +1,27 @@
 ﻿@using Foundation.Wealth.Helper;
+<html lang="zh-Hant-TW">
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="format-detection" content="telephone=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>第e理財網導轉</title>
+</head>
+<body>
+</body>
+</html>
 <script>
-        let xhr = new XMLHttpRequest();
-        xhr.open('post', '@ClientRoute.GenerateUrl(this, "Accounts", "GetUrlCookie")', true);
-        xhr.send(null);
-        xhr.onload = function () {
-            let res = JSON.parse(xhr.responseText);
-            if (res.url == '') {
-                           location.href = '/';
-            }else{
-            const url = new URL(res.url);
-           location.href = url;
-            }
-        }
+  let xhr = new XMLHttpRequest();
+  xhr.open('post', '@ClientRoute.GenerateUrl(this, "Accounts", "GetUrlCookie")', true);
+  xhr.send(null);
+  xhr.onload = function() {
+      let res = JSON.parse(xhr.responseText);
+      if (res.url == '') {
+          let homePage = new URL(location.protocol + "//" +location.hostname);
+          location.href = homePage;
+      } else {
+          const url = new URL(res.url);
+          location.href = url;
+      }
+  }
 </script>
