--- a/src/Project/Wealth/platform/Views/Project/Wealth/Partial/Popup.cshtml
+++ b/src/Project/Wealth/platform/Views/Project/Wealth/Partial/Popup.cshtml
@@ -26,13 +26,13 @@
                     <div class="c-loginBox__main">
                         <header class="c-loginBox__title">網銀登入</header>
                         <p class="c-loginBox__greeting">使用完整服務，請使用網銀帳號登入</p>
-                        <div class="c-loginBox__actions u-hidden@mb-only">
+                        <div class="c-loginBox__actions u-hidden@lt">
                             <a href="javascript:;" class="o-btn o-btn--primary o-btn--sm o-btn--flat" data-eh="fcblogin-click">網銀登入</a>
                         </div>
-                        <div class="c-loginBox__actions u-hidden@lt-up">
+                        <div class="c-loginBox__actions u-hidden@dt-only">
                             <a href="#" class="o-btn o-btn--primary o-btn--sm o-btn--flat" data-eh="fcbapplogin-init,fcbapplogin-click" eh-login-type="firste">第ｅ行動</a>
                         </div>
-                        <div class="c-loginBox__actions u-hidden@lt-up">
+                        <div class="c-loginBox__actions u-hidden@dt-only">
                             <a href="#" class="o-btn o-btn--primary o-btn--sm o-btn--flat" data-eh="fcbapplogin-init,fcbapplogin-click" eh-login-type="ileo">ileo</a>
                         </div>
                     </div>
@@ -530,9 +530,10 @@
                 let singlelink = "";
                 let regularlink = "";
                 let golink = "";
-                if ($(window).width() < 768) {
+                if ($(window).width() < 1199) {
                     $('input[name="platform"]', '#popupPurchase').on('click', function () {
                         let val = $(this).data('name');
+                        let id = single.getAttribute("eh-subscription-id")
                         if (val == "firste") {
                             singlelink = "@MobileESingleLink";
                             regularlink = "@MobileERegularLink";
@@ -542,41 +543,92 @@
                             regularlink = "@MobileIleoRegularLink";
                             golink = "@IleoEntrustLink";
                         }
-                        let singleUrl = new URL(singlelink.replaceAll("&amp;","&"));
+                        let singleUrl = new URL(singlelink.replaceAll("&amp;", "&"));
+                        let singleOriginAndPath = singleUrl.origin + singleUrl.pathname;
+                        let singleCombined = singleOriginAndPath + "?";
                         let regularUrl = new URL(regularlink.replaceAll("&amp;", "&"));
+                        let regularOriginAndPath = regularUrl.origin + regularUrl.pathname;
+                        let regularCombined = regularOriginAndPath + "?";
                         let goUrl = new URL(golink.replaceAll("&amp;", "&"));
+                        let goOriginAndPath = goUrl.origin + goUrl.pathname;
+                        let goCombined = goOriginAndPath + "?";
                         let singleParms = singleUrl.searchParams;
                         let regularParms = regularUrl.searchParams;
                         let goParms = goUrl.searchParams;
-
-                        if (singleParms.has("link")) {
+                        //行動版
                             let singleInsindeUrl = new URL(singleParms.get("link"));
                             let regularInsindUrl = new URL(regularParms.get("link"));
-                            let goInsideUrl = new URL(goParms.get("link"));
-                            singleInsindeUrl.searchParams.delete("FundCode");
-                            singleInsindeUrl.searchParams.append("FundCode", single.getAttribute("eh-subscription-id"));
-                            regularInsindUrl.searchParams.delete("FundCode");
-                            regularInsindUrl.searchParams.append("FundCode", regular.getAttribute("eh-subscription-id"));
-                            singleParms.delete("link",);
-                            singleParms.append("link", singleInsindeUrl);
-                            regularParms.delete("link");
-                            regularParms.append("link", regularInsindUrl);
-
+                            let goInsindUrl = new URL(goParms.get("link"));
+                            //第e行動
                             if (val == "firste") {
-                                if (goParms.has("prdCode")) {
-                                    goParms.delete("prdCode");
-                                    goParms.append("prdCode", go.getAttribute("eh-subscription-id"));
+                                for (const [key, value] of singleParms.entries()) {
+                                    if (key == "link") {
+                                        singleInsindeUrl.searchParams.delete("FundCode");
+                                        singleInsindeUrl.searchParams.append("FundCode", id);
+                                        singleCombined += `${key}=${encodeURIComponent(singleInsindeUrl)}&`;
+                                        continue;
+                                    }
+                                    singleCombined += `${key}=${value}&`;
                                 }
-                            } else {
-                                goInsideUrl.searchParams.delete("FundCode");
-                                goInsideUrl.searchParams.append("FundCode", go.getAttribute("eh-subscription-id"));
-                                goParms.delete("link");
-                                goParms.append("link", goInsideUrl);
+                                for (const [key, value] of regularParms.entries()) {
+                                    if (key == "link") {
+                                        regularInsindUrl.searchParams.delete("FundCode");
+                                        regularInsindUrl.searchParams.append("FundCode", id);
+                                        regularCombined += `${key}=${encodeURIComponent(regularInsindUrl)}&`;
+                                        continue;
+                                    }
+                                    regularCombined += `${key}=${value}&`;
+                                }
+                                for (const [key, value] of goParms.entries()) {
+                                    if (key == "link") {
+                                        goCombined += `${key}=${encodeURIComponent(value + '&')}`;
+                                        continue;
+                                    }
+                                    if (key == "chn" || key == "emp_id") {
+                                        goCombined += `${key}${encodeURIComponent('=' + value + '&')}`;
+                                        continue;
+                                    }
+                                    if (key == "prdCode") {
+                                        goCombined += `${key}${encodeURIComponent('=' + id)}&`;
+                                        continue;
+                                    }
+                                    goCombined += `${key}=${value}&`;
+                                }
+                            } else
+                            //iLeo
+                            {
+                                for (const [key, value] of singleParms.entries()) {
+                                    if (key == "link") {
+                                        singleInsindeUrl.searchParams.delete("FundCode");
+                                        singleInsindeUrl.searchParams.append("FundCode", id);
+                                        singleCombined += `${key}=${encodeURIComponent(singleInsindeUrl)}&`;
+                                        continue;
+                                    }
+                                    singleCombined += `${key}=${value}&`;
+                                }
+                                for (const [key, value] of regularParms.entries()) {
+                                    if (key == "link") {
+                                        regularInsindUrl.searchParams.delete("FundCode");
+                                        regularInsindUrl.searchParams.append("FundCode", id);
+                                        regularCombined += `${key}=${encodeURIComponent(regularInsindUrl)}&`;
+                                        continue;
+                                    }
+                                    regularCombined += `${key}=${value}&`;
+                                }
+                                for (const [key, value] of goParms.entries()) {
+                                    if (key == "link") {
+                                        goInsindUrl.searchParams.delete("FundCode");
+                                        goInsindUrl.searchParams.append("FundCode", id);
+                                        goCombined += `${key}=${encodeURIComponent(goInsindUrl)}&`;
+                                        continue;
+                                    }
+                                    goCombined += `${key}=${value}&`;
+                                }
                             }
-                        }
-                        single.setAttribute("href", singleUrl);
-                        regular.setAttribute("href", regularUrl);
-                        go.setAttribute("href", goUrl);
+                        
+                        single.setAttribute("href", singleCombined.slice(0, -1));
+                        regular.setAttribute("href", regularCombined.slice(0, -1));
+                        go.setAttribute("href", goCombined.slice(0, -1));
                         store.set("MobilePlatform", val);
                     });
 
