會壞掉只好還原

--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/NewFund/NewFund.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/NewFund/NewFund.cshtml
@@ -174,7 +174,7 @@
 						if (data) {
 							$('#result').empty();
 
-							document.getElementById('result').innerHTML = DOMPurify.sanitize(data);
+							document.getElementById('result').innerHTML = data;
 							var totalPages = parseInt($('#totalPages').val());
 
 							if (totalPages === 0) {
