--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/AwardFund/AwardFund.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/AwardFund/AwardFund.cshtml
@@ -218,7 +218,7 @@
 					data: { orderby: orderby, desc: desc },
 					success: function (data) {
 						$('#result').empty();
-                        document.getElementById('result').innerHTML = DOMPurify.sanitize(data);
+                        document.getElementById('result').innerHTML = data;
 						$('[data-popup]').magnificPopup();
 						$('[eh-compare]').trigger('exec');
 						$('[eh-focus]').trigger('exec');
