--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/HotFund/HotFund.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/HotFund/HotFund.cshtml
@@ -252,7 +252,7 @@
                     data: { selectedId: selectedId, orderby: orderby, desc: desc },
                     success: function (data) {
                         $('#result').empty();
-                        document.getElementById('result').innerHTML = DOMPurify.sanitize(data);
+                        document.getElementById('result').innerHTML = data;
                         Removefall();
                         $('[data-popup]').magnificPopup();
                         $('[eh-compare]').trigger('exec');
