--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/NewArrivalETF/NewArrivalEtf.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/NewArrivalETF/NewArrivalEtf.cshtml
@@ -173,7 +173,7 @@
                     success: function (data) {
                         if (data) {
                             $('#result').empty();
-                            document.getElementById('result').innerHTML = DOMPurify.sanitize(data);
+                            document.getElementById('result').innerHTML = data;
 
                             $('span.o-fall').each(function () {
                                 var content = $(this).text();
