修改 基金ETF比較頁待修改項目0605

--- a/src/Project/Wealth/platform/Views/Project/Wealth/Partial/Popup.cshtml
+++ b/src/Project/Wealth/platform/Views/Project/Wealth/Partial/Popup.cshtml
@@ -144,8 +144,8 @@
                 <div class="c-modalResult__icon">
                     <img src="~/themes/images/icons/orange/x-solid.svg" class="c-modalResult__img" alt="">
                 </div>
-                <div class="c-modalResult__title">基金商品比較已達上限</div>
-                <p class="c-modalResult__msg">您一次最多可比較7個基金</p>
+                <div class="c-modalResult__title">基金或ETF商品比較已達上限</div>
+                <p class="c-modalResult__msg">您一次最多可比較7個基金或ETF商品</p>
             </div>
         </div>
         <div class="c-modal__action">
